// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit form is invalid 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1l46zoq {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #dd3252;
}

.cache-1l46zoq::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1l46zoq::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1l46zoq:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1l46zoq::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1l46zoq:hover,
.cache-1l46zoq:focus {
  border-color: #4f0599;
}

.cache-1l46zoq:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1l46zoq::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1l46zoq::-moz-placeholder {
  opacity: 1;
}

.cache-1l46zoq:-ms-input-placeholder {
  opacity: 1;
}

.cache-1l46zoq::placeholder {
  opacity: 1;
}

.cache-1l46zoq:hover,
.cache-1l46zoq:focus {
  border-color: #a6102d;
}

.cache-1l46zoq:focus {
  box-shadow: 0px 0px 0px 3px #DD325240;
  border-color: #a6102d;
}

.cache-msb198 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

.cache-109ogi2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #22c8a2;
  color: #ffffff;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
}

.cache-109ogi2:hover,
.cache-109ogi2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-109ogi2:hover,
.cache-109ogi2:focus {
  color: #ffffff;
  background-color: #149a7b;
}

.cache-109ogi2:focus {
  box-shadow: 0 0 0 2px #149a7b40;
}

.cache-109ogi2 svg {
  fill: #c4c9d6;
}

.cache-7k5j4w {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh eoko61b6"
      >
        <input
          autocomplete="on"
          class="cache-1l46zoq eoko61b2"
          name="toto"
          type="text"
          value="4"
        />
      </div>
      <div
        class="cache-msb198 eoko61b3"
      >
        <div
          class="cache-1rshnsu eoko61b5"
        >
          This field should match the regex ^[a-zA-Z]*$
        </div>
      </div>
    </div>
    <button
      aria-disabled="true"
      class="cache-109ogi2 em6gco80"
      disabled=""
      type="submit"
    >
      <div
        class="cache-7k5j4w em6gco83"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit form is submitting 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-109ogi2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #22c8a2;
  color: #ffffff;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
}

.cache-109ogi2:hover,
.cache-109ogi2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-109ogi2:hover,
.cache-109ogi2:focus {
  color: #ffffff;
  background-color: #149a7b;
}

.cache-109ogi2:focus {
  box-shadow: 0 0 0 2px #149a7b40;
}

.cache-109ogi2 svg {
  fill: #c4c9d6;
}

.cache-zy3rt6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1dul7yn-css {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-7k5j4w {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <button
      aria-disabled="true"
      class="cache-109ogi2 em6gco80"
      disabled=""
      type="submit"
    >
      <div
        class="cache-zy3rt6 em6gco81"
      >
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="cache-1dul7yn-css"
          role="progressbar"
          style="height: 1em; width: 1em;"
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="transparent"
            stroke-width="16"
          />
          <circle
            class="cache-11f05l0-Loader"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="currentColor"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
      </div>
      <div
        class="cache-7k5j4w em6gco83"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit renders correctly  1`] = `
<DocumentFragment>
  .cache-tyws59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-tyws59:hover,
.cache-tyws59:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tyws59:hover,
.cache-tyws59:focus {
  color: #ffffff;
  background-color: #149a7b;
}

.cache-tyws59:focus {
  box-shadow: 0 0 0 2px #149a7b40;
}

.cache-7k5j4w {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <button
      aria-disabled="false"
      class="cache-tyws59 em6gco80"
      type="submit"
    >
      <div
        class="cache-7k5j4w em6gco83"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit renders correctly with icon and iconPosition  1`] = `
<DocumentFragment>
  .cache-tyws59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-tyws59:hover,
.cache-tyws59:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tyws59:hover,
.cache-tyws59:focus {
  color: #ffffff;
  background-color: #149a7b;
}

.cache-tyws59:focus {
  box-shadow: 0 0 0 2px #149a7b40;
}

.cache-7k5j4w {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  pointer-events: none;
}

.cache-zy3rt6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-kv8vgz-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<form
    novalidate=""
  >
    <button
      aria-disabled="false"
      class="cache-tyws59 em6gco80"
      type="submit"
    >
      <div
        class="cache-7k5j4w em6gco83"
      >
        Test
      </div>
      <div
        class="cache-zy3rt6 em6gco81"
      >
        <svg
          class="cache-kv8vgz-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
    </button>
  </form>
</DocumentFragment>
`;
